Update list of fixtures - round title - overlap tables while expanding - on/off mouse toggle expand fixture

--- a/web-application-front-end/src/components/fixtures/fixtureComponents/matchLineups/lineupPosition/lineupPosition.css
+++ b/web-application-front-end/src/components/fixtures/fixtureComponents/matchLineups/lineupPosition/lineupPosition.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     overflow-y: auto;
-    height: 100%;
+    height: fit-content;
 }
 
 .football-pitch::-webkit-scrollbar {
