--- a/web-application-front-end/src/components/fixtures/fixtureComponents/matchStats/matchStats.css
+++ b/web-application-front-end/src/components/fixtures/fixtureComponents/matchStats/matchStats.css
@@ -4,6 +4,8 @@
     display: none;
     height: 0;
     transition: height 0.3s ease, padding 0.3s ease;
+    background-color: #fff;
+    border-radius: 15px;
 }
 
 .match-stats.expanded {
@@ -19,13 +21,11 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 100px;
-    /* align-items: center; */
     padding: 5px;
 }
 
 .logo-container {
     flex: 1;
-    /* text-align: center; */
 }
 
 .logo-container img {
@@ -41,6 +41,7 @@
     flex-direction: column;
     align-items: center;
     overflow-y: scroll;
+    gap: 10px;
 }
 
 .list-of-categories::-webkit-scrollbar {
@@ -53,9 +54,9 @@
     border-radius: 15px;
     padding: 5px;
     background-color: #f5f5f5;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
     margin-bottom: 5px;
-    width: 100%;
+    width: 90%;
     /* Set width to 100% to center within parent */
     text-align: center;
     /* Center text within the category */
