--- a/web-application-front-end/src/components/fixtures/futureFixtures/futureFixture.css
+++ b/web-application-front-end/src/components/fixtures/futureFixtures/futureFixture.css
@@ -81,6 +81,9 @@
     cursor: pointer;
     margin-top: 10px;
     font-size: 24px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding-block: 5px;
 }
 
 .expand-button i {
