--- a/web-application-front-end/src/components/fixtures/results/fixtureResult.css
+++ b/web-application-front-end/src/components/fixtures/results/fixtureResult.css
@@ -12,7 +12,6 @@
 
 .match-result-container.expanded {
     height: auto;
-    padding: 10px;
 }
 
 .team-details {
@@ -108,6 +107,10 @@
     margin: 0 10px;
 }
 
+.match-expanded {
+    z-index: 2;
+}
+
 .section-navigation {
     justify-content: space-between;
     background-color: #fff;
@@ -193,11 +196,14 @@
 
 .expand-button {
     display: flex;
-    justify-content: center;
-    align-items: center;
     cursor: pointer;
-    margin-top: 10px;
     font-size: 24px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding-block: 5px;
+    z-index: 2;
+    width: 40%;
+    align-self: center;
 }
 
 .expand-button i {
